# Lex-Link

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_STATUS.md  Dockerfile  LICENSE  Makefile  PUBLISH_TO_GITHUB.md  QUICKSTART.md  README.md  SAFETY.md  SAFETY_COMPLIANCE_SUMMARY.md  SAFETY_VERIFICATION.md  SECURITY.md  VERIFICATION_REPORT.md  docker-compose.yml  flake.nix  publish.sh
.github/workflows/: ci.yml
audit/: Cargo.toml
audit/src/: audit.rs  levels.rs  lib.rs  merkle.rs  service.rs
axiom-s1/: Cargo.toml  tauri.conf.json
axiom-s1/src/: bark.rs  cozo_db.rs  dsif.rs  hunter_killer.rs  inference.rs  invariance.rs  main.rs  sandbox.rs  scout.rs  sovereign_loop.rs
axiom-s1/ui/: index.html  package.json  tailwind.config.js  vite.config.ts
axiom-s1/ui/src/: App.tsx  index.css
browser-mac/: Package.swift
browser-mac/Sources/InvarianceCore/: InvarianceCore.swift
browser-mac/Sources/LEXOmegaBrowser/: BrowserApp.swift
browser-mac/Sources/SSMRuntime/: SSMRuntime.swift
ci/: build.sh  github-actions.yml
docs/: 01-substrate-law.md  02-key-ceremony.md  03-incident-response.md  04-browser-guide.md  CODE_CLEANUP_SUMMARY.md  DSIF_IMPLEMENTATION.md  LEGAL_RISK_ASSESSMENT.md  MES_SAFETY_VERIFICATION.md  MONETIZING_CERTAINTY.md  OPERATOR_GUIDE.md  README.md  RELEASE_NOTES.md  TECHNICAL_BACKBONE.md  TECHNICAL_DIAGNOSIS.md  VERIFICATION_FRAMEWORK.md  axiom-hive-vs-grok-comparison.md  geodesic-bifurcation.md  glass-cannon-paradox-and-axiom-hive.md  math-for-llm.md  technical-diagnosis-probabilistic-vs-deterministic.md
invariance/: README.md  __init__.py  cli.py  hsm.py  pyproject.toml
invariance/tests/: test_invariance.py
kernel-bark/: Makefile  README.md
kernel-bark/include/: bark.h
kernel-bark/src/: bark_entropy.c  bark_hooks.c  bark_main.c  bark_signature.c
merkle-entropy-service/: .gitignore  Dockerfile  README.md  SAFETY.md  docker-compose.yml
merkle-entropy-service/mes/: __init__.py  entropy.py  main.py  merkle.py  operator_control.py  safety.py
merkle-entropy-service/tests/: test_merkle_entropy.py
portal/: Cargo.toml  openapi.yaml
portal/src/: main.rs
sap4d/: Cargo.toml
sap4d/src/: axioms.rs  causal.rs  engine.rs  lib.rs  receipt.rs  trace.rs
schemas/: receipt.schema.json
scripts/: deploy.sh  health-check.sh
tools/hunter_killer/: Cargo.toml
tools/hunter_killer/src/: main.rs
tools/mcp/: audit_stream.py
verification/: Cargo.toml
verification/src/: attestation.rs  builder.rs  bundle.rs  deterministic.rs  lib.rs  provenance.rs  verifier.rs
