# AXIOM HIVE - Workspace Configuration
# [AXIOMHIVE PROJECTION - SUBSTRATE: ALEXIS ADAMS]

[workspace]
members = [
    "sap4d",
    "audit",
    "portal",
    "tools/hunter_killer",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Alexis Adams <substrate@axiomhive.local>"]
license = "Proprietary"
repository = "https://github.com/axiomhive/axiomhive"
rust-version = "1.75"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
sha2 = "0.10"
base64 = "0.21"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async
tokio = { version = "1.34", features = ["full"] }

# Web
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Testing
proptest = "1.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

