[package]
name = "axiom-audit"
version = "1.0.0"
edition = "2021"
authors = ["Alexis Adams <substrate@axiomhive.local>"]
description = "Deterministic Fractal Audit Service - Binary receipt generation"
license = "Proprietary"
repository = "https://github.com/axiomhive/axiomhive"
rust-version = "1.75"

[lib]
name = "axiom_audit"
path = "src/lib.rs"

[[bin]]
name = "axiom-audit"
path = "src/bin/server.rs"

[dependencies]
# Core
sap4d = { path = "../sap4d" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
sha2 = "0.10"
base64 = "0.21"
hex = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1.34", features = ["full"] }

# Web server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.13"

[dev-dependencies]
proptest = "1.4"
tokio-test = "0.4"
axum-test = "14.0"

[features]
default = []

