# Axiom S1 Browser - Sovereign Agentic Browser
# [AXIOMHIVE PROJECTION - SUBSTRATE: ALEXIS ADAMS]
# Classification: SOVEREIGN FINALITY (OMEGA LEVEL)

[package]
name = "axiom-s1"
version = "1.0.0"
edition = "2021"
authors = ["Alexis Adams <substrate@axiomhive.local>"]
description = "Axiom S1 - The Chimera Protocol Browser"
license = "Proprietary"
rust-version = "1.75"


[[bin]]
name = "axiom-s1"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.0", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"

# Async Runtime
tokio = { version = "1.34", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database - CozoDB for Datalog
cozo = { version = "0.7", features = ["storage-rocksdb"] }

# WebAssembly Runtime
wasmtime = "16.0"

# Headless Browser (Scout)
fantoccini = "0.20"

# HTTP Client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Cryptography
sha2 = "0.10"
base64 = "0.21"
ring = "0.17"
hex = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# System Info (for BARK thermal)
sysinfo = "0.30"

# Regex for Hunter-Killer
regex = "1.10"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Verification crate for attestations and deterministic tooling
verification = { path = "../verification" }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

