[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axiomhive-invariance"
version = "1.0.0"
description = "AXIOM HIVE Invariance Layer - Deterministic verification for C=0 compliance"
readme = "README.md"
license = {text = "Proprietary - Substrate Controlled"}
authors = [
    {name = "Alexis Adams", email = "substrate@axiomhive.local"}
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Typing :: Typed",
]
dependencies = [
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
hsm = [
    "yubihsm[http]>=2.1.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.0.290",
    "hypothesis>=6.82.0",
]
all = [
    "axiomhive-invariance[hsm,dev]",
]

[project.scripts]
invariance = "invariance.cli:main"

[project.urls]
Homepage = "https://axiomhive.local"
Documentation = "https://docs.axiomhive.local/invariance"
Repository = "https://github.com/axiomhive/axiomhive"

[tool.setuptools.packages.find]
where = ["."]
include = ["invariance*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::RuntimeWarning:invariance",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.coverage.run]
source = ["invariance"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

