[package]
name = "axiom-portal"
version = "1.0.0"
edition = "2021"
authors = ["Alexis Adams <substrate@axiomhive.local>"]
description = "AXIOM HIVE Verification Portal - Public binary proof receipts"
license = "Proprietary"
repository = "https://github.com/axiomhive/axiomhive"
rust-version = "1.75"

[[bin]]
name = "axiom-portal"
path = "src/main.rs"

[dependencies]
# Core
sap4d = { path = "../sap4d" }
axiom-audit = { path = "../audit" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
sha2 = "0.10"
base64 = "0.21"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1.34", features = ["full"] }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Rate limiting
governor = "0.6"

# Configuration
config = "0.13"

[dev-dependencies]
axum-test = "14.0"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

