[package]
name = "sap4d"
version = "1.0.0"
edition = "2021"
authors = ["Alexis Adams <substrate@axiomhive.local>"]
description = "SAP-4D Proof Engine - Causal inference with stepwise logic traces"
license = "Proprietary"
repository = "https://github.com/axiomhive/axiomhive"
keywords = ["proof", "verification", "causal-inference", "deterministic"]
categories = ["cryptography", "mathematics"]
rust-version = "1.75"

[lib]
name = "sap4d"
path = "src/lib.rs"

[[bin]]
name = "sap4d-cli"
path = "src/bin/cli.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
sha2 = "0.10"
base64 = "0.21"
hex = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"

[dev-dependencies]
proptest = "1.4"
criterion = "0.5"
tokio-test = "0.4"

[features]
default = []
benchmark = []




