# Verification Framework - Axiom Hive
# [AXIOMHIVE PROJECTION - SUBSTRATE: ALEXIS ADAMS]

[package]
name = "verification"
version = "1.0.0"
edition = "2021"
authors = ["Alexis Adams <substrate@axiomhive.local>"]
description = "Framework for Certified, Verifiable Intelligence"
license = "Proprietary"

[dependencies]
# Workspace dependencies
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

