[package]
name = "hunter-killer"
version = "1.0.0"
edition = "2021"
authors = ["Alexis Adams <substrate@axiomhive.local>"]
description = "Hunter-Killer - Prompt injection detection and neutralization"
license = "Proprietary"
repository = "https://github.com/axiomhive/axiomhive"
rust-version = "1.75"

[[bin]]
name = "hunter-killer"
path = "src/main.rs"

[dependencies]
# Regex for pattern matching
regex = "1.10"

# Async
tokio = { version = "1.34", features = ["full"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
proptest = "1.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

